Bug #17701, ALTER TABLE t1 ADD PARTITION for PARTITION BY LIST hangs test - code wrongly tries to do a "fast alter partition", although not supported

sql/handler.h:
  moved defines
sql/sql_partition.h:
  moved defines